# DesktopAssistant

./: .gitignore  CMakeLists.txt  README.md  res.qrc
base/: base_operationresult.h  base_validator.h  date_extension.h  enumerable_extension.h  limited_queue.h
models/: AccountBalance.h  AccountID.h  AccountItem.h  AccountStatusOptions.h  CategoryID.h  CategoryItem.h  InsideAccountItem.h  MoneyRecord.h  bill.cpp  bill.h  categorymanager.cpp  categorymanager.h  eventsummary.h  financialsummary.h
services/: accountservice.cpp  accountservice.h  billmanager.cpp  billmanager.h  calculateservice.cpp  calculateservice.h  smartfillservice.cpp  smartfillservice.h
src/: DashboardPage.h  MainWindow.cpp  MainWindow.h  PlaceholderPage.h  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/core/: DatabaseManager.cpp  DatabaseManager.h
src/data/: DatabaseManager.cpp  DatabaseManager.h
src/pages/: CoursePage.cpp  CoursePage.h  DashboardPage.cpp  DashboardPage.h  DesktopPet.cpp  DesktopPet.h  FinancePage.cpp  FinancePage.h  PlaceholderPage.cpp  PlaceholderPage.h  PomodoroStatsPage.cpp  PomodoroStatsPage.h  ReportPage.cpp  ReportPage.h  TimelinePage.cpp  TimelinePage.h  TimerPage.cpp  TimerPage.h  addbilldialog.cpp  addbilldialog.h
